--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -17,13 +17,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tv_p"
-            android:textStyle="bold"
-            android:padding="5sp"/>
+            style="@style/ChatTextLabel"/>
         <TextView
             android:id="@+id/textview_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5sp" />
+            style="@style/ChatText" />
     </LinearLayout>
 
     <LinearLayout
@@ -37,13 +36,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tv_a"
-            android:textStyle="bold"
-            android:padding="5sp"/>
+            style="@style/ChatTextLabel"/>
         <TextView
             android:id="@+id/textview_answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5sp" />
+            style="@style/ChatText" />
     </LinearLayout>
 
     <TableLayout
@@ -62,7 +60,8 @@
                 android:layout_column="1"
                 android:inputType="text"
                 android:hint="@string/ask_question"
-                android:autofillHints="@string/ask_question" />
+                android:autofillHints="@string/ask_question"
+                style="@style/ChatText"/>
 
             <Button
                 android:id="@+id/button_prompt"
@@ -75,8 +74,7 @@
                 android:id="@+id/textview_loading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5sp"
-                android:text="@string/elipsis"/>
+                style="@style/ChatText"/>
         </TableRow>
 
     </TableLayout>
