--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="chat_text_size">16sp</dimen>
+    <dimen name="chat_text_padding">5sp</dimen>
 </resources>
