--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -14,14 +14,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/tv_p"
             style="@style/ChatTextLabel"/>
         <TextView
             android:id="@+id/textview_question"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             style="@style/ChatText" />
     </LinearLayout>
 
@@ -33,51 +29,36 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/tv_a"
             style="@style/ChatTextLabel"/>
         <TextView
             android:id="@+id/textview_answer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             style="@style/ChatText" />
     </LinearLayout>
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        android:stretchColumns="1">
+        <Button
+            android:id="@+id/button_prompt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_prompt"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-        <TableRow tools:ignore="UselessParent">
-            <EditText
-                android:id="@+id/edittext_ask_question"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:inputType="text"
-                android:hint="@string/ask_question"
-                android:autofillHints="@string/ask_question"
-                style="@style/ChatText"/>
+        <EditText
+            android:id="@+id/edittext_ask_question"
+            android:layout_width="match_parent"
+            android:hint="@string/ask_question"
+            android:autofillHints="@string/ask_question"
+            style="@style/ChatEditText"/>
 
-            <Button
-                android:id="@+id/button_prompt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:text="@string/button_prompt"/>
-
-            <TextView
-                android:id="@+id/textview_loading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/ChatText"/>
-        </TableRow>
-
-    </TableLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
