--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,21 @@
 <resources>
 
     <style name="ChatText" parent="TextAppearance.AppCompat">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/chat_text_size</item>
         <item name="android:padding">@dimen/chat_text_padding</item>
     </style>
 
     <style name="ChatTextLabel" parent="ChatText">
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ChatEditText" parent="ChatText">
+        <item name="android:inputType">textMultiLine</item>
+        <item name="android:maxLines">@integer/chat_edit_text_max_length</item>
+        <item name="android:maxLength">@integer/chat_edit_text_max_length</item>
+        <item name="android:scrollHorizontally">false</item>
     </style>
 
     </resources>
