add settings activity with terms links and option to show startup terms agreement, save/sync checkboxes with show terms shared preferences

--- a/app/src/main/res/layout/alertdialog_hide_checkbox.xml
+++ b/app/src/main/res/layout/alertdialog_hide_checkbox.xml
@@ -8,6 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="@string/hide_terms_agree"/>
+        android:text="@string/show_terms_agreement_prompt"/>
 
 </FrameLayout>
