disable subscribe button until working

--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -20,7 +20,8 @@
         android:id="@+id/button_subscribe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/subscribe" />
+        android:text="@string/subscribe"
+        android:enabled="false"/>
 
     <View
         android:layout_width="match_parent"
