--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -23,6 +23,18 @@
         android:text="@string/subscribe"
         android:enabled="false"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/apply_early_access"
+        style="@style/ChatText"/>
+
+    <Button
+        android:id="@+id/button_join_testers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/join_testers"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
