rewrite analytics as separate custom events, add log click ToU and PP events, move alertdialog contents to layout file, rename strings for more clarity

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -54,7 +54,7 @@
         <EditText
             android:id="@+id/edittext_ask_question"
             android:layout_width="match_parent"
-            android:hint="@string/ask_question"
+            android:hint="@string/enter_prompt"
             android:autofillHints="@string/ask_question"
             style="@style/ChatEditText"/>
 
