make prompt/response content textviews copyable, double max prompt edittext length to 80 chars, don't send firebase log events while debugging, don't send crashlytics while debugging

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -18,7 +18,7 @@
             style="@style/ChatTextLabel"/>
         <TextView
             android:id="@+id/textview_question"
-            style="@style/ChatText" />
+            style="@style/ChatTextContent" />
     </LinearLayout>
 
     <LinearLayout
@@ -33,7 +33,7 @@
             style="@style/ChatTextLabel"/>
         <TextView
             android:id="@+id/textview_answer"
-            style="@style/ChatText" />
+            style="@style/ChatTextContent" />
     </LinearLayout>
 
     <LinearLayout
