--- a/app/src/main/res/layout/account_activity.xml
+++ b/app/src/main/res/layout/account_activity.xml
@@ -22,6 +22,13 @@
         android:layout_height="wrap_content"
         android:text="@string/login"/>
 
+    <Button
+        android:id="@+id/button_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text= "@string/logout"
+        android:visibility="gone"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
