--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_account"
         android:orderInCategory="100"
-        android:title="@string/title_activity_settings"
+        android:title="@string/account"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_terms"
+        android:orderInCategory="100"
+        android:title="@string/terms"
         app:showAsAction="never" />
 </menu>
