add account detail views, change AccountActivity onResume>onStart, reduce default prompt/response limits for anons, increase limits when user logged in, update relevant ui items by logged in status, update relevant string resources

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -21,7 +21,8 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:text="@string/tv_p"
+                    android:id="@+id/textview_label_name"
+                    android:text="@string/anon"
                     style="@style/ChatTextLabel"/>
 
                 <TextView
