--- a/app/src/main/res/layout/terms_activity.xml
+++ b/app/src/main/res/layout/terms_activity.xml
@@ -21,6 +21,13 @@
             style="@style/ChatText"/>
 
         <TextView
+            android:id="@+id/app_link_terms_of_use"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/html_app_terms_of_use"
+            style="@style/ChatText" />
+
+        <TextView
             android:id="@+id/app_link_privacy_policy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
