--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -17,7 +17,7 @@
 
             <LinearLayout
                 android:id="@+id/layout_question"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
@@ -31,20 +31,33 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/layout_answer"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/layout_response"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/label_ai"
                     android:text="@string/tv_a"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
                     style="@style/ChatTextLabel"/>
+
+                <Button
+                    android:id="@+id/button_audio_dictation"
+                    android:layout_width="30sp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/audio_icon_auto"
+                    style="@style/ChatTextLabel"
+                    android:layout_below="@id/label_ai"/>
 
                 <TextView
                     android:id="@+id/textview_answer"
+                    android:layout_width="match_parent"
+                    android:layout_toEndOf="@id/label_ai"
                     style="@style/ChatTextContent" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
     </ScrollView>
