--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="chat_text_size">18sp</dimen>
     <dimen name="chat_text_padding">5sp</dimen>
+    <dimen name="chat_label_margin">2sp</dimen>
 </resources>
