--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -119,8 +119,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/testing_warning"
-            android:visibility="gone"/>
+            android:text="@string/testing_warning"/>
 
         <TextView
             android:layout_width="wrap_content"
