--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -119,7 +119,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/testing_warning"/>
+            android:text="@string/testing_warning"
+            android:visibility="gone"/>
 
         <TextView
             android:layout_width="wrap_content"
