--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -36,7 +36,7 @@
                 <TextView
                     android:id="@+id/label_ai"
                     android:layout_width="wrap_content"
-                    android:text="@string/tv_a"
+                    android:text="@string/label_ai"
                     style="@style/ChatTextLabel"/>
 
                 <ScrollView
