--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,11 +11,11 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_chat">
 
-        <action
+<!--        <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            app:destination="@id/SecondFragment" />-->
     </fragment>
-    <fragment
+<!--    <fragment
         android:id="@+id/SecondFragment"
         android:name="org.bitanon.chatgpt3.SecondFragment"
         android:label="@string/second_fragment_label"
@@ -24,5 +24,5 @@
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/ChatFragment" />
-    </fragment>
+    </fragment>-->
 </navigation>
