--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,13 +5,16 @@
 
     <item
         android:id="@+id/action_account"
-        android:orderInCategory="100"
         android:title="@string/account"
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_settings"
+        android:title="@string/title_activity_settings"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_terms"
-        android:orderInCategory="100"
         android:title="@string/terms"
         app:showAsAction="never" />
 </menu>
