--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="chat_text_padding">5sp</dimen>
     <dimen name="chat_label_margin">2sp</dimen>
     <dimen name="chat_label_layout_width">30sp</dimen>
+    <dimen name="settings_speech_speed_slider_width">150sp</dimen>
 </resources>
