fix material.Switch inflation crash, remove subs, add paidWordCount to firestore user, remove billing subscription stuff, add billing paid words consumables,

--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -106,15 +106,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/remove_limits_ads"
+            android:text="@string/remove_limits"
             style="@style/ChatText"/>
 
         <Button
-            android:id="@+id/button_subscribe"
+            android:id="@+id/button_upgrade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/subscribe"
-            android:enabled="false"/>
+            android:text="@string/upgrade"/>
 
         <TextView
             android:layout_width="wrap_content"
